--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "eslint": "^1.10.3",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-react": "^3.14.0",
+    "eslint-plugin-standard": "^1.3.1",
     "watchify": "^3.6.1"
   }
 }
