--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
+  "name": "rxjs-learning",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "watchify js/App.jsx -o app.js -v -d -t [ babelify ]",
+    "start": "watchify js/app.js -o app.js -v -d -t [ babelify ]",
     "reset": "git reset --hard origin/master && npm update yolk"
   },
   "dependencies": {
-    "immutable": "^3.7.6",
+    "lodash": "^4.0.0",
+    "react": "^0.14.6",
     "rx": "^4",
-    "todomvc-app-css": "^2.0.0",
-    "todomvc-common": "^1.0.0",
-    "yolk": "*"
+    "superagent": "^1.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.3.13",
     "babel-plugin-transform-react-jsx": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
+    "browserify": "^13.0.0",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-plugin-react": "^3.14.0",
